<resources>
    <string name="app_name">Camera</string>
    <string name="start_server">开启服务</string>
    <string name="stop_server">停止服务</string>
    <string name="capture">截屏</string>
    <string name="capture_image">截图显示</string>
    <string name="start_recorder">开始录屏</string>
    <string name="stop_recorder">停止录屏</string>
    <string name="stop_capture">停止截屏</string>
    <string name="capture_region">区域截屏</string>
    <string name="recorder_region">区域录制</string>
</resources>
